Cambio de version a 1.0.1

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -9,8 +9,8 @@
         <h1>ToDoList</h1>
         <ul>
             <li>Desarrollada por José Antonio Cubí Torres </li>
-            <li>Versión 1.0.1 (en desarrollo)</li>
-            <li>Fecha de release: pendiente de release</li>
+            <li>Versión 1.0.1</li>
+            <li>Fecha de release: 3/10/2022</li>
         </ul>
     </div>
 
