--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -5,33 +5,21 @@
 
 <!-- Navbar -->
 <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/about">ToDoList <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/login">Login <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/tareas">Tareas</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown link
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Cuenta</a>
-                        <a class="dropdown-item" href="#">Cerrar Sesión</a>
-                    </div>
+                    <a class="nav-link" href="/registro">Registro</a>
                 </li>
             </ul>
         </div>
     </nav>
 </div>
 <!-- Navbar -->
+
 <body>
 <div class="container-fluid">
     <div class="container-fluid">
