--- a/src/main/resources/templates/listaTareas.html
+++ b/src/main/resources/templates/listaTareas.html
@@ -20,7 +20,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Cuenta</a>
-                        <a class="dropdown-item" href="/login" th:text="'Cerrar sesión ' + ${usuario.nombre}"></a>
+                        <a class="dropdown-item" href="/logout" th:text="'Cerrar sesión ' + ${usuario.nombre}"></a>
                     </div>
                 </li>
             </ul>
