--- a/src/main/resources/templates/listaUsuarios.html
+++ b/src/main/resources/templates/listaUsuarios.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="fragments :: head (titulo='Lista de Usuarios')"></head>
 
-<body>
+
+
 <div class="container-fluid">
     <div class="row mt-3">
         <div class="col">
@@ -23,7 +25,11 @@
                 <tr th:each="usuario: ${usuarios}">
                     <td th:text="${usuario.id}"></td>
                     <td th:text="${usuario.email}"></td>
+                    <td>
+                        <a class="btn btn-primary" th:href="@{/registrados/{id}(id=${usuario.id})}">Descripcion </a>
+                    </td>
                 </tr>
+
                 </tbody>
             </table>
         </div>
