--- a/src/main/resources/templates/formRegistro.html
+++ b/src/main/resources/templates/formRegistro.html
@@ -38,8 +38,21 @@
                             <input id="fechaNacimiento" class="form-control" name="fechaNacimiento"
                                    placeholder="01-12-2019" th:field="*{fechaNacimiento}"/>
                         </div>
-
-                        <button type="submit" class="btn btn-primary">Registro</button>
+                        <div class="form-group" id="divCB">
+                            <label for="cb"> Usuario Administrador </label>
+                            <input type="checkbox" id="cb" class="form-control" name="cb"
+                                   th:field="*{admin}" Usuario Administrador/>
+                        </div>
+                        <script>
+                            function hidecb() {
+                                const div = document.getElementById("divCB");
+                                const cb = document.getElementById("cb");
+                                if(cb.checked) {
+                                    div.style.display = "none";
+                                }
+                            }
+                        </script>
+                        <button onclick="hidecb()" type="submit" id="boton" class="btn btn-primary">Registro</button>
                         <a class="btn btn-link" href="/login">Ir a login</a>
                     </div>
                 </div>
