--- a/src/main/resources/templates/descripcionUsuarios.html
+++ b/src/main/resources/templates/descripcionUsuarios.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: head (titulo='Acerca de')"></head>
+<head th:replace="fragments :: head (titulo='Descripción de usuarios')"></head>
 
 <!-- Navbar -->
 <div class="container-fluid">
@@ -24,17 +24,26 @@
 
 <body>
 <div class="container-fluid">
-    <div class="container-fluid">
-        <h1>ToDoList</h1>
-        <ul>
-            <li>Desarrollada por José Antonio Cubí Torres </li>
-            <li>Versión 1.0.1</li>
-            <li>Fecha de release: 3/10/2022</li>
-        </ul>
+    <div class="row mt-3">
+        <div class="col">
+            <h2 th:text="'Descripción de usuario'"></h2>
+        </div>
     </div>
+    <table class="table table-striped">
+        <tr>
+            <th>Id</th>
+            <th>Nombre</th>
+            <th>Email</th>
+            <th>Fecha de nacimiento</th>
+        </tr>
+        <tr>
+            <td th:text="${usuarios.id}"></td>
+            <td th:text="${usuarios.nombre}"></td>
+            <td th:text="${usuarios.email}"></td>
+            <td th:text="${usuarios.fechaNacimiento}"></td>
+        </tr>
+    </table>
 </div>
-
-<div th:replace="fragments::javascript"/>
 
 </body>
 </html>
