--- a/src/main/resources/templates/aboutLog.html
+++ b/src/main/resources/templates/aboutLog.html
@@ -34,7 +34,7 @@
         <h1>ToDoList</h1>
         <ul>
             <li>Desarrollada por José Antonio Cubí Torres </li>
-            <li>Versión 1.1.0</li>
+            <li>Versión 1.2.0-SNAPSHOT</li>
             <li>Fecha de release: 18/10/2022</li>
         </ul>
     </div>
