Creada la función que lista los integrantes de un equipo y sus respectivas templates

--- a/src/main/resources/templates/listaEquipos.html
+++ b/src/main/resources/templates/listaEquipos.html
@@ -43,7 +43,10 @@
                 <tbody>
                 <tr th:each="equipo: ${equipos}">
                     <td th:text="${equipo.id}"></td>
-                    <td th:text="${equipo.nombre}"></td>
+                    <td>
+                        <a th:href="@{/equipos/{id}(id=${equipo.id})}"
+                           th:text="${equipo.nombre}"></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
