--- a/src/main/resources/templates/listaEquipos.html
+++ b/src/main/resources/templates/listaEquipos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments :: head (titulo='Lista de Usuarios')"></head>
+<head th:replace="fragments :: head (titulo='Lista de equipos')"></head>
 
 <!-- Navbar -->
 <div class="container-fluid">
@@ -30,6 +30,8 @@
             <h2 th:text="'Listado de equipos'"></h2>
         </div>
     </div>
+
+    <a class="btn btn-primary" href="/equipos/nuevo">Crear nuevo equipo</a>
 
     <div class="row mt-3">
         <div class="col">
