--- a/src/main/resources/templates/formCrearEquipo.html
+++ b/src/main/resources/templates/formCrearEquipo.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="fragments :: head (titulo='Lista de equipos')"></head>
+<head th:replace="fragments :: head (titulo='Acerca de')"></head>
 
 <!-- Navbar -->
 <div class="container-fluid">
@@ -32,36 +31,20 @@
 </div>
 <!-- Navbar -->
 
-<div class="container-fluid">
-    <div class="row mt-3">
-        <div class="col">
-            <h2 th:text="'Listado de equipos'"></h2>
+<body>
+    <form method="post" th:action="@{/equipos/nuevo}" th:object="${equipoData}">
+        <div class="col-6">
+            <div class="form-group">
+                <label for="titulo">Nombre del equipo:</label>
+                <input class="form-control" id="titulo" name="titulo" required th:field="*{titulo}" type="text"/>
+            </div>
+            <button class="btn btn-primary" type="submit">Crear equipo</button>
+            <a class="btn btn-link" th:href="@{/equipos}">Cancelar</a>
         </div>
-    </div>
+    </form>
 
-    <a class="btn btn-primary" href="/equipos/nuevo">Crear nuevo equipo</a>
+    <div th:replace="fragments::javascript"/>
 
-    <div class="row mt-3">
-        <div class="col">
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Nombre</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="equipo: ${equipos}">
-                    <td th:text="${equipo.id}"></td>
-                    <td>
-                        <a th:href="@{/equipos/{id}(id=${equipo.id})}"
-                           th:text="${equipo.nombre}"></a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
+
 </body>
 </html>
