--- a/src/main/resources/templates/integrantesEquipo.html
+++ b/src/main/resources/templates/integrantesEquipo.html
@@ -12,10 +12,19 @@
           <a class="nav-link" href="/about">ToDoList <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" th:href="@{/login}">Login</a>
+          <a class="nav-link" th:href="@{/usuarios/{id}/tareas(id=${usuario.id})}">Tareas</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" th:href="@{/registro}">Registro</a>
+          <a class="nav-link" th:href="@{/registrados}">Registrados</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+             th:text="${usuario.nombre}">
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Cuenta</a>
+            <a class="dropdown-item" href="/logout" th:text="'Cerrar sesión ' + ${usuario.nombre}"></a>
+          </div>
         </li>
       </ul>
     </div>
