--- a/src/main/resources/templates/aboutLog.html
+++ b/src/main/resources/templates/aboutLog.html
@@ -16,6 +16,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/registrados}">Registrados</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/equipos}">Equipos</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                        th:text="${usuario.nombre}">
@@ -30,7 +33,6 @@
     </nav>
 </div>
 <!-- Navbar -->
-
 <body>
 <div class="container-fluid">
     <div class="container-fluid">
