--- a/src/main/resources/templates/formCrearEquipo.html
+++ b/src/main/resources/templates/formCrearEquipo.html
@@ -16,6 +16,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/registrados}">Registrados</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/equipos}">Equipos</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                        th:text="${usuario.nombre}">
@@ -32,19 +35,21 @@
 <!-- Navbar -->
 
 <body>
+<div class="container-fluid">
+
     <form method="post" th:action="@{/equipos/nuevo}" th:object="${equipoData}">
         <div class="col-6">
             <div class="form-group">
-                <label for="titulo">Nombre del equipo:</label>
+                <label for="titulo">Título del equipo:</label>
                 <input class="form-control" id="titulo" name="titulo" required th:field="*{titulo}" type="text"/>
             </div>
             <button class="btn btn-primary" type="submit">Crear equipo</button>
             <a class="btn btn-link" th:href="@{/equipos}">Cancelar</a>
         </div>
     </form>
+</div>
 
-    <div th:replace="fragments::javascript"/>
-
+<div th:replace="fragments::javascript"/>
 
 </body>
 </html>
