--- a/src/main/resources/templates/listaEquipos.html
+++ b/src/main/resources/templates/listaEquipos.html
@@ -17,6 +17,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/registrados}">Registrados</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/equipos}">Equipos</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                        th:text="${usuario.nombre}">
