Añadidos botones para entrar o salir de un equipo

--- a/src/main/resources/templates/integrantesEquipo.html
+++ b/src/main/resources/templates/integrantesEquipo.html
@@ -43,6 +43,10 @@
     </div>
   </div>
 
+  <a class="btn btn-primary">Participar en el equipo</a>
+
+  <a class="btn btn-danger btn-xs">Dejar de participar en el equipo</a>
+
   <div class="row mt-3">
     <div class="col">
       <table class="table table-striped">
