--- a/src/main/resources/templates/integrantesEquipo.html
+++ b/src/main/resources/templates/integrantesEquipo.html
@@ -48,9 +48,11 @@
       <button class="btn btn-primary" type="submit">Participar en el equipo</button>
     </div>
   </form>
-
-  <a class="btn btn-danger btn-xs">Dejar de participar en el equipo</a>
-
+  <br>
+    <div>
+      <button class="btn btn-danger btn-xs" onmouseover="" style="cursor: pointer;"
+              th:onclick="'del(\'/equipos/' + ${equipo.id} + '\')'">Dejar de participar en el equipo</button>
+    </div>
   <div class="row mt-3">
     <div class="col">
       <table class="table table-striped">
@@ -72,5 +74,15 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  function del(urlBorrar) {
+    if (confirm('¿Estás seguro/a de que quieres dejar de participar en el equipo?')) {
+      fetch(urlBorrar, {
+        method: 'DELETE'
+      }).then((res) => location.reload());
+    }
+  }
+</script>
 </body>
 </html>
